force-app/main/default/objects/Maintenance_Request__c/Maintenance_Request__c.object-meta.xml
<CustomObject>
    <description>Maintenance Request object - demonstrates Master-Detail relationships and Roll-Up Summary fields. EXAM TIP: Master-Detail provides roll-up summaries and cascading delete</description>
    <label>Maintenance Request</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>