force-app/main/default/objects/Maintenance_Request__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date request was completed</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>